Bug 48407 - Java2Demo background gradient brocken with xrender backend [SNA]
Summary: Java2Demo background gradient brocken with xrender backend [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-06 16:07 UTC by Clemens Eisserer
Modified: 2012-04-07 01:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (53.72 KB, image/png)
2012-04-06 16:07 UTC, Clemens Eisserer
no flags Details
demo application (399.91 KB, application/x-java-archive)
2012-04-06 16:08 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2012-04-06 16:07:08 UTC
Created attachment 59609 [details]
screenshot

When running Java2Demo the optional green gradient background is not smooth with java's xrender backend turned on.

To reproduce the problem, please start Java2Demo with the following arguments (java2 required):
java -Dsun.java2d.xrender=True -jar Java2Demo.jar

then check the "Texture" checkbox and click on the green gradient below.
Comment 1 Clemens Eisserer 2012-04-06 16:08:37 UTC
Created attachment 59610 [details]
demo application
Comment 2 Chris Wilson 2012-04-07 01:57:01 UTC
Now that was a silly bug!

commit 1ecf17b2507f95e1fefea15833fa9f57ec256a2e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Apr 7 10:01:01 2012 +0100

    sna/gradient: Compute the absolute delta between color stops
    
    Otherwise we do not detect gradients that start from white!
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48407
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.